; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_get_identity.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_get_identity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_blob = type { i32 }
%struct.TYPE_2__ = type { i64 }

@CSSLOT_CODEDIRECTORY = common dso_local global i32 0, align 4
@CSMAGIC_CODEDIRECTORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @csblob_get_identity(%struct.cs_blob* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cs_blob*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store %struct.cs_blob* %0, %struct.cs_blob** %3, align 8
  %5 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %6 = load i32, i32* @CSSLOT_CODEDIRECTORY, align 4
  %7 = load i32, i32* @CSMAGIC_CODEDIRECTORY, align 4
  %8 = call i64 @csblob_find_blob(%struct.cs_blob* %5, i32 %6, i32 %7)
  %9 = inttoptr i64 %8 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %4, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %11 = icmp eq %struct.TYPE_2__* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %28

13:                                               ; preds = %1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i8* null, i8** %2, align 8
  br label %28

19:                                               ; preds = %13
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %21 = bitcast %struct.TYPE_2__* %20 to i8*
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @ntohl(i64 %24)
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %21, i64 %26
  store i8* %27, i8** %2, align 8
  br label %28

28:                                               ; preds = %19, %18, %12
  %29 = load i8*, i8** %2, align 8
  ret i8* %29
}

declare dso_local i64 @csblob_find_blob(%struct.cs_blob*, i32, i32) #1

declare dso_local i32 @ntohl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
